feat: 新增RAG调试页面并优化检索性能
- 新增RAG调试页面，支持可视化查看检索、组装和提示词生成过程
- 重构SceneRepository为文件产物管理器，移除细粒度CRUD操作，提升批量加载性能
- 向量检索结果增加元数据传递，支持按小说/版本分组批量加载场景
- 调整上下文组装配置参数，提高最大块长度和上下文token限制
- 前端新增token估算工具和调试API接口
- 修复测试用例以适配新的存储架构